--- a/index.html
+++ b/index.html
@@ -14,6 +14,40 @@
     <header class="hero">
         <h1 class="title p-2 text-center">Weather Dash</h1>
     </header>
+    <main class="flex-row">
+        <div class="m-4 p-4">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h5>Search for a City:</h5>
+                        <form class="form-inline" id="search-form">
+                            <label id="form-label" for="location"></label>
+                            <input name="location" type="search" class="form-control mb-3" id="location" placeholder="Enter city name...">
+                            <button type="submit" class="btn btn-primary" id="searchBtn">search</button>
+                        </form>
+                        <ul class="list-group" id="search-history"></ul>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card mt-2">
+                            <div class="card-body">
+                                <div class="d-flex flex-row ">
+                                    <h2 class="card-title align-self-center" id="main-city-name"></h2> 
+                                </div>
+                                <h6 class="card-subtitle text-muted" id="main-city-temp">Temperature: </h6>
+                                <h6 class="card-subtitle mt-3 text-muted" id="main-city-humid">Humidity: </h6>
+                                <h6 class="card-subtitle mt-3 text-muted" id="main-city-wind">Wind Speed: </h6>
+                            </div>  
+                        </div>                       
+                        <div>
+                            <h2 class="card-title mt-3">5-Day Forecast:</h2>
+                            <div class="row justify-content-between" id="five-day">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./assets/script.js"></script>
