made changes to line 22, more specific user callout for cities in America

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-3">
-                        <h5>Search for a City:</h5>
+                        <h5>Search for a City in America:</h5>
                         <form class="form-inline" id="search-form">
                             <label id="form-label" for="location"></label>
-                            <input name="location" type="search" class="form-control mb-3" id="location" placeholder="Enter city name...">
+                            <input name="location" type="search" class="form-control mb-3" id="location" placeholder="Enter city name here!">
                             <button type="submit" class="btn btn-primary" id="searchBtn">search</button>
                         </form>
                         <ul class="list-group" id="search-history"></ul>
